# CLI-NetworkScanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __version__.py  config.py  database.py  history.py  map.html  networkscanner.py  pyproject.toml  reporting.py  requirements.txt  setup.py  test_all_features.py  test_traceroute_interactive.py  trace_map.html
.cache/: ip_geo_cache.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
data/: scan_history.db
modules/: __init__.py  bandwidth_monitor.py  device_discovery.py  dns_tools.py  ip_geolocation.py  mac_address_changer.py  network_info.py  ping_utility.py  port_scanner.py  service_identification.py  ssl_checker.py  traceroute.py
modules/data/: service_signatures.json  vulnerabilities.json
reports/: port_scan_google.com_20250405_095300.csv  port_scan_google.com_20250405_095409.json
scripts/: maintenance.py  repo_dashboard.py  repo_health_check.py  version_manager.py
